style.css
* {margin: 0; padding: 0; box-sizing: border-box;}
/* -----------------------------------------------
        Fonts
----------------------------------------------- */

  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Manrope:wght@700&family=Poppins:wght@500;600;700&display=swap');

body {
    font-family: 'Poppins', sans-serif;
    color: #3a3a3a;    
    font-size: 16px;
    line-height: 24px;
}

/* ------------------------------------
        Menu Styles
------------------------------------ */
.container {
    padding: 0px 10%;
}
.nav {
    padding-top: 40px;
    padding-bottom: 20px;
}
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.mobileToggle, .mobileCart {
    display: none;
}
.logo h3 {
    font-size: 24px;
    line-height: 34px;
    font-weight: 700;
    color: #3A3A3A;
}
.nav-menu {
    list-style-type: none;
    display: flex;
    column-gap: 34px;
}
.nav-menu li a {
    text-decoration: none;
    font-weight: 700;
    color: #3A3A3A;
}

/* -------------------------------------
            Hero Area Styles
------------------------------------- */
.dFlex {
    padding-top: 50px;
    padding-bottom: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.w50 {
    width: 46%;
    margin: 2% 0;
}
.heroHeading {
    font-size: 52px;
    font-weight: 700;
    line-height: 68px;
}
.heroText {
    font-weight: 600;
    margin: 32px 0px;
}
.button {
    font-weight: 700;
    color: #fff;
    padding: 10px 24px;
    background: #E02C6D;
    text-decoration: none;
}
.heroButton {    
    border-radius: 41px;
}
.heroButton .fa-arrow-right-long {
    margin-left: 8px;
}
.heroImage{
    background: url(images/Circle\ design.svg);
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
}
.heroImage img {
    display: block;
    margin: 0 auto;
}

/* -------------------------------------
            Clients Logo Styles
------------------------------------- */

.logoImages {
    display: flex;
    justify-content: space-between;
    padding: 43px 0px;
    flex-wrap: wrap;
    align-items: center;
    row-gap: 50px;
    column-gap: 50px;
}


/* ---------------------------------------
            Products Card Styles
--------------------------------------- */
.sectionTitle {
    margin: 65px 0px;
    text-align: center;
    font-size: 28px;
    font-weight: 600;
    line-height: 70px;
}

.popularProducts {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: space-between;
    column-gap: 40px;
    row-gap: 40px;
}
.popularProduct {
    background: #FFFFFF;
    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
    border-radius: 5px;
    padding: 15px;
    border-radius: 5px;
}
.popularProduct img {
    width: 100%;
}
.productsName {
    font-size: 28px;
    font-weight: 500;
    margin: 16px 0px 42px;
}
.productsRatings {
    font-family: "Roboto";
    font-size: 14px;
    font-weight: 700;
    color: #5E6366;
}
.fa-star, .fa-star-half-stroke {
    color: #FB8200;
    font-size: 12px;
}
.fa-star-half-stroke {
    margin-right: 8px;
}
.productsDescription {
    font-family: "Inter";
    font-size:  14px;
    font-weight: 700;
    line-height: 143%;
}
.seeMoreLinks {
    text-align: right;
    margin: 50px 0px;
}
.seeMoreLinks a {
    font-weight: 700;
    text-decoration: none;
    color: #E02C6DDE;
}

/* --------------------------------------------
            Featured Products Styles
-------------------------------------------- */

.featuredTitle {
    font-size: 38px;
    font-weight: 700;
    line-height: 58px;
}
.featuredImage img {
    width: 100%;
}
.featuredDescription {
    font-weight: 700;
    margin: 46px 0px;
}

/* -----------------------------------------------------
                 Footer Styles
----------------------------------------------------- */

footer {
    background: #0A0826;
    text-align: center;
    color: #fff;
    padding: 50px;
}
.footerHeading {
    font-weight: bold;
    font-size: 24px;
    line-height: 36px;
}
.footerCopyright {
    margin: 15px 0px;
    font-family: "Manrope";
    font-weight: bold;
    font-size: 14px;
    line-height: 125%;
    color: #D9DBE1;
}
.socialMenu {
    display: flex;
    justify-content: center;
    column-gap: 16px;
    align-items: center;
}
.socialMenu li {
    list-style-type: none;    
    width: 38px;
    height: 38px;
    border-radius: 50%;    
    background: #22213C;
}
.socialMenu li a {
    color: #fff;
    line-height: 244%;
}

/* ---------------------------------------------------
                Responsive Media Queires
---------------------------------------------------- */

@media only screen and (max-width: 768px){
    .container {
        padding: 0px 10px;
        text-align: center;
    }
    .nav {
        padding-top: 40px;
    }
    .heroArea {
        padding-top: 50px;
    }
    .dFlex {
        flex-direction: column-reverse;
        row-gap: 60px;
    }
    .w50 {
        width: 100%;
        text-align: center;
    }
    .clientsLogoArea {
        margin: 50px 0px;
    }
    
    .popularProducts {
        grid-template-columns: repeat(1, 1fr);
    }
    .popularProduct {
        text-align: left;
    }
    footer {
        margin-top: 50px;
    }
}
@media only screen and (max-width: 992px){
    .popularProducts {
        grid-template-columns: repeat(2, 1fr);
    }
}
@media only screen and (max-width: 1159px){
    .logoImages {
        justify-content: center;
    }
}
/* ------------------------------------------------
            Mobile Menu 
------------------------------------------------ */
@media only screen and (max-width: 809px) {
    .mobileCart, .mobileToggle {
        display: block;
    }
    .nav-menu {
        display: none;
    }
    .nav {
        padding-left: 5%;
        padding-right: 5%;
    }
}

